seaqt/QtCore/gen_qstringconverter.h

class QChar;
class QStringDecoder;
class QStringEncoder;
typedef struct QChar QChar;
typedef struct QStringDecoder QStringDecoder;
typedef struct QStringEncoder QStringEncoder;
QStringEncoder* QStringEncoder_new();
QStringEncoder* QStringEncoder_new_encoding(int encoding);
QStringEncoder* QStringEncoder_new_name(struct seaqt_string name);
QStringEncoder* QStringEncoder_new_encoding_flags(int encoding, int flags);
QStringEncoder* QStringEncoder_new_name_flags(struct seaqt_string name, int flags);
ptrdiff_t QStringEncoder_requiredSpace(const QStringEncoder* self, ptrdiff_t inputLength);
QStringDecoder* QStringDecoder_new_encoding(int encoding);
QStringDecoder* QStringDecoder_new();
QStringDecoder* QStringDecoder_new_name(struct seaqt_string name);
QStringDecoder* QStringDecoder_new_encoding_flags(int encoding, int flags);
QStringDecoder* QStringDecoder_new_name_f(struct seaqt_string name, int f);
ptrdiff_t QStringDecoder_requiredSpace(const QStringDecoder* self, ptrdiff_t inputLength);
QChar* QStringDecoder_appendToBuffer_QChar_QByteArrayView(QStringDecoder* self, QChar* out, struct seaqt_string ba);
QStringDecoder* QStringDecoder_decoderForHtml(struct seaqt_string data);